--- a/photoshare/photoshare/ReferFriendViewController.xib
+++ b/photoshare/photoshare/ReferFriendViewController.xib
@@ -6,6 +6,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ReferFriendViewController">
             <connections>
+                <outlet property="mypicker" destination="YOX-9O-wRB" id="dac-8g-wA7"/>
                 <outlet property="scrollView" destination="5XX-PH-cli" id="4l9-NL-Lhv"/>
                 <outlet property="view" destination="1" id="3"/>
                 <outlet property="webViewReferral" destination="1sJ-lM-kkB" id="dcr-i4-WSa"/>
@@ -29,12 +30,20 @@
                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                         </textView>
                         <webView clipsSubviews="YES" contentMode="scaleToFill" scalesPageToFit="YES" id="1sJ-lM-kkB">
-                            <rect key="frame" x="0.0" y="143" width="320" height="233"/>
+                            <rect key="frame" x="0.0" y="60" width="320" height="203"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <connections>
                                 <outlet property="delegate" destination="-1" id="Yta-G4-UcA"/>
                             </connections>
                         </webView>
+                        <pickerView contentMode="scaleToFill" id="YOX-9O-wRB">
+                            <rect key="frame" x="0.0" y="241" width="320" height="162"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <connections>
+                                <outlet property="dataSource" destination="-1" id="5dg-Xf-IFB"/>
+                                <outlet property="delegate" destination="-1" id="ekY-LZ-LiG"/>
+                            </connections>
+                        </pickerView>
                     </subviews>
                 </scrollView>
             </subviews>
