--- a/photoshare/photoshare/ReferFriendViewController.xib
+++ b/photoshare/photoshare/ReferFriendViewController.xib
@@ -20,7 +20,7 @@
                     <rect key="frame" x="0.0" y="72" width="320" height="423"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <subviews>
-                        <textView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" bounces="NO" editable="NO" text="Choose a toolbox to help refer your friends" textAlignment="center" id="1RP-d8-cxx">
+                        <textView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" bounces="NO" editable="NO" text="Choose a video to help refer your friends" textAlignment="center" id="1RP-d8-cxx">
                             <rect key="frame" x="0.0" y="20" width="320" height="50"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
